--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+
+        <springfox-swagger.version>2.9.2</springfox-swagger.version>
+        <swagger.version>1.5.20</swagger.version>
     </properties>
 
 </project>
