--- a/AccountSystemWeb/pom.xml
+++ b/AccountSystemWeb/pom.xml
@@ -10,9 +10,24 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>za.ac.nwu.ac</groupId>
     <artifactId>AccountSystemWeb</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
+    <!-- <dependencies>
+         <dependency>
+             <groupId>za.ac.nwu</groupId>
+             <artifactId>AccountSystemDomain1</artifactId>
+             <version>1.0-SNAPSHOT</version>
+             <scope>compile</scope>
+         </dependency>
+
+         <dependency>
+             <groupId>za.ac.nwu</groupId>
+             <artifactId>AccountSystemRepository</artifactId>
+             <version>1.0-SNAPSHOT</version>
+             <scope>compile</scope>
+         </dependency>
+     </dependencies>-->
 
     
 </project>
