--- a/AccountSystemWebSpringBoot1/src/main/resources/application.properties
+++ b/AccountSystemWebSpringBoot1/src/main/resources/application.properties
@@ -5,6 +5,6 @@ swagger.application.name=AccountSystem
 swagger.application.description=@project.description@
 swagger.application.version=@project.version@
 
-spring.application.name=AccountSystem
-server.servlet.context-path=/account-system
+spring.application.name=Member List
+server.servlet.context-path=/Member
 spring.mvc.servlet.path=/mvc
