--- a/AccountSystemWebSpringBoot1/src/main/resources/application.properties
+++ b/AccountSystemWebSpringBoot1/src/main/resources/application.properties
@@ -6,5 +6,5 @@ swagger.application.description=@project.description@
 swagger.application.version=@project.version@
 
 spring.application.name=Member List
-server.servlet.context-path=/Member
+server.servlet.context-path=/member
 spring.mvc.servlet.path=/mvc
